Main: Modified configurations.

--- a/2-basics/secrets/mongo-secret.yaml
+++ b/2-basics/secrets/mongo-secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: mongodb-secret
 type: Opaque
 data:
-  username: dXNlcm5hbWU=
-  password: cGFzc3dvcmQ=
+  mongo-root-username: dXNlcm5hbWU=
+  mongo-root-password: cGFzc3dvcmQ=
