--- a/5-vms/single-node/Vagrantfile
+++ b/5-vms/single-node/Vagrantfile
@@ -7,7 +7,7 @@ Vagrant.configure("2") do |config|
     config.vm.network "private_network", ip: "192.168.33.80"
     config.vm.synced_folder "./code", "/vagrant_data"
     config.vm.provider "virtualbox" do |vb|
-        vb.gui = false
+        vb.gui = true
         vb.memory = "8024"
         vb.cpus = 4
         vb.name = "single"
