--- a/4-example-project/kubernetes/common/app-config.yml
+++ b/4-example-project/kubernetes/common/app-config.yml
@@ -6,7 +6,7 @@ data:
   APP_NAME: "Laravel"
   APP_ENV: "prod"
   APP_DEBUG: "true"
-  APP_URL: "https://laravel-project"
+  APP_URL: "https://laravel-project.de"
   LOG_CHANNEL: "stdout"
   LOG_DEPRECATIONS_CHANNEL: "null"
   LOG_LEVEL: "debug"
